--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -20,3 +20,6 @@ ENDIF (ENABLE_RUBY)
 IF (ENABLE_TCL)
     ADD_SUBDIRECTORY (tcl)
 ENDIF (ENABLE_TCL)
+IF (ENABLE_LUA)
+    ADD_SUBDIRECTORY (lua)
+ENDIF (ENABLE_LUA)
