Specify link dependencies for static build
For static linking we need to specify the link dependencies via the
pkg-config and FindLibSolv.cmake files as well, so statically linked
application can refer to them.

--- a/cmake/modules/FindLibSolv.cmake.in
+++ b/cmake/modules/FindLibSolv.cmake.in
@@ -66,6 +66,8 @@ MARK_AS_ADVANCED(
     LibSolv_INCLUDE_DIRS
 )
 
+@LIBSOLV_EXT_DEPS@
+
 # Look for components
 FOREACH(COMPONENT ${LibSolv_FIND_COMPONENTS})
     STRING(TOUPPER ${COMPONENT} _UPPERCOMPONENT)
@@ -75,13 +77,13 @@ FOREACH(COMPONENT ${LibSolv_FIND_COMPONENTS})
     SET(LibSolv_${COMPONENT}_FIND_QUIETLY ${LibSolv_FIND_QUIETLY})
     FIND_PACKAGE_HANDLE_STANDARD_ARGS(LibSolv_${COMPONENT} DEFAULT_MSG LIBSOLV_${_UPPERCOMPONENT}_LIBRARY)
     MARK_AS_ADVANCED(
-	LIBSOLV_${_UPPERCOMPONENT}_FOUND
-	LIBSOLV_${_UPPERCOMPONENT}_LIBRARY
+        LIBSOLV_${_UPPERCOMPONENT}_FOUND
+        LIBSOLV_${_UPPERCOMPONENT}_LIBRARY
     )
     IF(LIBSOLV_${_UPPERCOMPONENT}_FOUND)
-	SET(LibSolv_LIBRARIES ${LibSolv_LIBRARIES} ${LIBSOLV_${_UPPERCOMPONENT}_LIBRARY})
+        SET(LibSolv_LIBRARIES ${LibSolv_LIBRARIES} ${LIBSOLV_${_UPPERCOMPONENT}_LIBRARY} ${LIBSOLV_${_UPPERCOMPONENT}_LIBRARY_DEPS})
     ELSE()
-	SET(LibSolv_FOUND FALSE)
+        SET(LibSolv_FOUND FALSE)
     ENDIF()
 ENDFOREACH()
 
