Use bash for installing rpms from plain directory
Also give an exit code in case globbing failed.

--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -172,6 +172,8 @@ Summary:        Utilities used by libzypp to manage .solv files
 Group:          System/Management
 Provides:       libsolv-tools:%{_bindir}/repo2solv
 Conflicts:      libsolv-tools < %{version}
+# needed for recursive globbing of plaindir in repo2solv
+Requires:       /usr/bin/bash
 
 %description tools-base
 This subpackage contains utilities used by libzypp to manage solv files.
@@ -182,7 +184,6 @@ Group:          System/Management
 Conflicts:      satsolver-tools-obsolete
 Obsoletes:      satsolver-tools < 0.18
 Provides:       satsolver-tools = 0.18
-Requires:       findutils
 Requires:       libsolv-tools-base = %{version}
 
 %description tools
