Move tar handling from repo_arch into its own file
We'll need it for apk packages.

--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -144,6 +144,11 @@ IF (ENABLE_ZCHUNK_COMPRESSION)
 	solv_zchunk.c)
 ENDIF (ENABLE_ZCHUNK_COMPRESSION)
 
+IF (ENABLE_ARCHREPO)
+    SET (libsolvext_SRCS ${libsolvext_SRCS}
+	tarhead.c)
+ENDIF (ENABLE_ARCHREPO)
+
 IF (NOT MSVC)
 SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 ENDIF (NOT MSVC)
