Add support for DISTTYPE_APK to the libsolv core
This is mostly the apk version comparison. We also do not add
spaces around the comparison ops for apk and shorten =~ to ~.

This is currenly bould to MULTI_SEMANTICS as we do not have
an "alpine" target yet.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,10 @@ IF (ENABLE_CONDA)
     SET (libsolv_HEADERS ${libsolv_HEADERS} conda.h)
 ENDIF (ENABLE_CONDA)
 
+IF (MULTI_SEMANTICS)
+    SET (libsolv_SRCS ${libsolv_SRCS} apk.c)
+ENDIF (MULTI_SEMANTICS)
+
 IF (NOT MSVC)
     SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 ENDIF (NOT MSVC)
