Make LIBSOLVEXT_FEATURE_APK available in solvversion.h

--- a/src/solvversion.h.in
+++ b/src/solvversion.h.in
@@ -42,6 +42,7 @@ extern const char solv_toolversion[];
 #cmakedefine LIBSOLVEXT_FEATURE_ARCHREPO
 #cmakedefine LIBSOLVEXT_FEATURE_HAIKU
 #cmakedefine LIBSOLVEXT_FEATURE_APPDATA
+#cmakedefine LIBSOLVEXT_FEATURE_APK
 #cmakedefine LIBSOLVEXT_FEATURE_ZLIB_COMPRESSION
 #cmakedefine LIBSOLVEXT_FEATURE_LZMA_COMPRESSION
 #cmakedefine LIBSOLVEXT_FEATURE_BZIP2_COMPRESSION
