--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup
         run:  |
-          sudo apt-get install cmake
+          sudo apt-get install cmake liblzma-dev
       - name: Build
         run:  |
           mkdir build
