--- a/bindings/CMakeLists.txt
+++ b/bindings/CMakeLists.txt
@@ -1,3 +1,10 @@
+
+IF (ENABLE_STATIC AND NOT DISABLE_SHARED AND ENABLE_STATIC_BINDINGS)
+    SET (LIBSOLV_BINDINGS_LIBRARIES libsolvext_static libsolv_static)
+ELSE (ENABLE_STATIC AND NOT DISABLE_SHARED AND ENABLE_STATIC_BINDINGS)
+    SET (LIBSOLV_BINDINGS_LIBRARIES libsolvext libsolv)
+ENDIF (ENABLE_STATIC AND NOT DISABLE_SHARED AND ENABLE_STATIC_BINDINGS)
+
 SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 
 FIND_PACKAGE (SWIG)
