Change the package to build both static and dynamic
This is done for suse_version >= 1600, i.e. openSUSE and SLES16.
There will be a new subpackage called libsolv-devel-static.

--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -60,8 +60,15 @@
 %bcond_with ruby
 %bcond_with perl
 %endif
+
+%if 0%{?suse_version} >= 1600
+%bcond_without static
+%bcond_without shared
+%else
 %bcond_without static
 %bcond_with shared
+%endif
+
 %bcond_with zypp
 
 Name:           libsolv
@@ -167,6 +174,15 @@ Conflicts:      libsatsolver-devel
 Development files for libsolv, a library for solving packages and
 reading repositories.
 
+%package devel-static
+Summary:        Development files for libsolv, a package solver
+Group:          Development/Libraries/C and C++
+Requires:       libsolv-devel = %version
+
+%description devel-static
+Development files for libsolv, a library for solving packages and
+reading repositories.
+
 %package tools-base
 Summary:        Utilities used by libzypp to manage .solv files
 Group:          System/Management
@@ -267,7 +283,7 @@ cmake . $CMAKE_FLAGS \
 	-DENABLE_APPDATA=1 \
 	-DENABLE_COMPS=1 \
 	-DMULTI_SEMANTICS=1 \
-	%{?with_static:-DENABLE_STATIC=1} \
+	%{?with_static:-DENABLE_STATIC=1 -DENABLE_STATIC_TOOLS=1 -DENABLE_STATIC_BINDINGS=1} \
 	%{!?with_shared:-DDISABLE_SHARED=1} \
 	%{?with_perl:-DENABLE_PERL=1} \
 	%{?with_python:-DENABLE_PYTHON=1} \
@@ -344,7 +360,7 @@ make ARGS=--output-on-failure test
 
 %files devel
 %defattr(-,root,root)
-%if %{with static}
+%if %{with static} && !%{with shared}
 %{_libdir}/libsolv.a
 %{_libdir}/libsolvext.a
 %endif
@@ -360,6 +376,13 @@ make ARGS=--output-on-failure test
 %{_datadir}/cmake/Modules/*
 %{_libdir}/pkgconfig/libsolv*.pc
 %{_mandir}/man3/*
+
+%if %{with static} && %{with shared}
+%files devel-static
+%defattr(-,root,root)
+%{_libdir}/libsolv.a
+%{_libdir}/libsolvext.a
+%endif
 
 %files demo
 %defattr(-,root,root)
