--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -42,6 +42,10 @@ IF (ENABLE_APPDATA)
 SET (libsolv_MANPAGES1 ${libsolv_MANPAGES1} appdata2solv.1)
 ENDIF (ENABLE_APPDATA)
 
+IF (ENABLE_APK)
+SET (libsolv_MANPAGES1 ${libsolv_MANPAGES1} apk2solv.1)
+ENDIF (ENABLE_APK)
+
 # prepend gen directory
 STRING(REGEX REPLACE "([^;]+)" "gen/\\1" libsolv_MANPAGES1 "${libsolv_MANPAGES1}")
 STRING(REGEX REPLACE "([^;]+)" "gen/\\1" libsolv_MANPAGES3 "${libsolv_MANPAGES3}")
