--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,8 +14,9 @@ ENDIF (HAVE___QSORT_R)
 ADD_DEFINITIONS (-DLIBSOLV_INTERNAL=1)
 
 SET (libsolv_SRCS
-    bitmap.c poolarch.c poolvendor.c poolid.c strpool.c dirpool.c
-    solver.c solverdebug.c repo_solv.c repo_write.c evr.c pool.c
+    bitmap.c poolarch.c poolvendor.c poolid.c
+    poolwhatprovides.c pool.c strpool.c dirpool.c
+    solver.c solverdebug.c repo_solv.c repo_write.c evr.c
     queue.c repo.c repodata.c repopage.c util.c policy.c solvable.c
     transaction.c order.c rules.c problems.c linkedpkg.c cplxdeps.c
     chksum.c md5.c sha1.c sha2.c solvversion.c selection.c
