Python: Provide dist-info metadata
This causes the Python bindings to be registered with pip and replace the
unofficial builds posted to PyPI from the Pulp project.  Some packaging
systems will also treat this as if it were so built, e.g. Fedora/RHEL RPMs
will generate Provides: python3dist(solv).

--- a/bindings/python3/CMakeLists.txt
+++ b/bindings/python3/CMakeLists.txt
@@ -36,3 +36,4 @@ TARGET_LINK_LIBRARIES (bindings_python3 ${LIBSOLV_BINDINGS_LIBRARIES} ${SYSTEM_L
 
 INSTALL (TARGETS bindings_python3 LIBRARY DESTINATION ${PYTHON3_INSTALL_DIR})
 INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/solv.py DESTINATION ${PYTHON3_INSTALL_DIR})
+INSTALL (FILES ${CMAKE_BINARY_DIR}/bindings/python/METADATA DESTINATION ${PYTHON3_INSTALL_DIR}/solv-${VERSION}.dist-info)
